@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,10 +25,9 @@
  * @test
  * @bug 8225056
  * @compile GetPermittedSubclasses.jcod
- * @compile --enable-preview -source ${jdk.version} noSubclass/BaseC.java noSubclass/BaseI.java noSubclass/Impl1.java
- * @compile --enable-preview -source ${jdk.version} noSubclass/Impl2.java
- * @compile --enable-preview -source ${jdk.version} GetPermittedSubclassesTest.java
- * @run main/othervm --enable-preview GetPermittedSubclassesTest
+ * @compile noSubclass/BaseC.java noSubclass/BaseI.java noSubclass/Impl1.java
+ * @compile noSubclass/Impl2.java
+ * @run main GetPermittedSubclassesTest
  */
 
 import java.util.ArrayList;
